# yt-sync

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
yt-sync/src/: main.rs
